--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
     "axios": "^1.4.0",
