--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@emailjs/browser": "^3.11.0",
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
+    "@vercel/analytics": "^1.0.1",
     "axios": "^1.4.0",
     "cloudinary": "^1.32.0",
     "eslint-config-next": "^13.0.1",
