--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^7.6.4",
     "imagemin": "^8.0.1",
     "imagemin-jpegtran": "^7.0.0",
+    "lazysizes": "^5.3.2",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
